--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,14 +2,5 @@ server:
   port: 8080
 
 spring:
-  datasource:
-    url: jdbc:h2:mem:~/cafeKioskApplication
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-  h2:
-    console:
-      enabled: true
+  profiles:
+    default: local # 기본 환경을 dev로
